--- a/examples/perl/Dockerfile
+++ b/examples/perl/Dockerfile
@@ -1,3 +1,5 @@
+# BUILD:  docker build -t my-perl-app .
+# RUN: docker run -it --rm --name my-running-app my-perl-app
 FROM perl:5.20
 COPY . /usr/src/myapp
 WORKDIR /usr/src/myapp
